MAINT: update pip constraints and pre-commit (#202)
* DOC: add back comma to reference style
  https://sphinxcontrib-bibtex.readthedocs.io/en/latest/usage.html\#referencing-style
* DX: activate VSCode multi-file diff editor
  https://code.visualstudio.com/updates/v1_85\#_multifile-diff-editor
* DX: define `docnblive` job in `tox.ini`
* DX: define `nb` job in `tox.ini`
* DX: outsource bibliography style to `sphinx-pybtex-etal-style`
* DX: outsource `wiki` role to `sphinx-api-relink`
* ENH: remove `importlib-metadata` from `doc` dependencies
* ENH: remove `ypy-websocket` version constraints
* MAINT: clean up `conf.py` with new Sphinx extensions
* MAINT: remove `numpy` version restriction

---------

Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,7 @@
   },
   "[python]": {
     "editor.codeActionsOnSave": {
-      "source.organizeImports": true
+      "source.organizeImports": "explicit"
     },
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.rulers": [88]
@@ -31,6 +31,7 @@
   "coverage-gutters.showGutterCoverage": false,
   "coverage-gutters.showLineCoverage": true,
   "cSpell.enabled": true,
+  "diffEditor.experimental.showMoves": true,
   "editor.formatOnSave": true,
   "files.watcherExclude": {
     "**/*_cache/**": true,
@@ -41,6 +42,7 @@
   "git.rebaseWhenSync": true,
   "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
   "livePreview.defaultPreviewPath": "docs/_build/html",
+  "multiDiffEditor.experimental.enabled": true,
   "mypy-type-checker.args": ["--config-file=${workspaceFolder}/pyproject.toml"],
   "mypy-type-checker.importStrategy": "fromEnvironment",
   "myst.preview.extensions": [
