--- a/tox.ini
+++ b/tox.ini
@@ -64,6 +64,7 @@ commands =
     --re-ignore docs/.*\.yaml \
     --re-ignore docs/.*\.yml \
     --re-ignore docs/_build/.* \
+    --re-ignore docs/api \
     --watch docs \
     docs/ docs/_build/html
 description =
@@ -83,6 +84,36 @@ commands =
     docs/ docs/_build/html
 description =
   Build documentation through Sphinx WITH output of Jupyter notebooks
+passenv = *
+setenv =
+  EXECUTE_NB = yes
+  FORCE_COLOR = yes
+
+[testenv:docnblive]
+allowlist_externals =
+  sphinx-autobuild
+commands =
+  sphinx-autobuild \
+    --open-browser \
+    --re-ignore .*/.ipynb_checkpoints/.* \
+    --re-ignore .*/__pycache__/.* \
+    --re-ignore .*\.gitignore \
+    --re-ignore docs/.*\.csv \
+    --re-ignore docs/.*\.gif \
+    --re-ignore docs/.*\.gv \
+    --re-ignore docs/.*\.inv \
+    --re-ignore docs/.*\.json \
+    --re-ignore docs/.*\.pickle \
+    --re-ignore docs/.*\.png \
+    --re-ignore docs/.*\.svg \
+    --re-ignore docs/.*\.yaml \
+    --re-ignore docs/.*\.yml \
+    --re-ignore docs/_build/.* \
+    --re-ignore docs/api \
+    --watch docs \
+    docs/ docs/_build/html
+description =
+  Set up a server to directly preview changes to the HTML pages
 passenv = *
 setenv =
   EXECUTE_NB = yes
@@ -110,6 +141,17 @@ description =
 passenv = *
 setenv =
   FORCE_COLOR = yes
+
+[testenv:nb]
+allowlist_externals =
+  pytest
+commands =
+  pytest --nbmake {posargs:docs}
+description =
+  Run all notebooks with pytest
+passenv = *
+setenv =
+  PYTHONHASHSEED = 0
 
 [testenv:sty]
 allowlist_externals =
