--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ ci:
   skip:
     - check-jsonschema
     - mypy
+    - prettier
     - pyright
     - taplo
     - update-json-schema
@@ -13,6 +14,20 @@ repos:
     hooks:
       - id: check-hooks-apply
       - id: check-useless-excludes
+
+  - repo: https://github.com/ComPWA/repo-maintenance
+    rev: 0.1.9
+    hooks:
+      - id: check-dev-files
+        args:
+          - --ci-skipped-tests=all
+          - --no-macos
+          - --no-prettierrc
+          - --pin-requirements=bimonthly
+          - --repo-name=PWA-pages
+          - --repo-title=PWA Pages
+      - id: colab-toc-visible
+      - id: fix-nbformat-version
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
@@ -38,29 +53,6 @@ repos:
         args: ["--django"]
       - id: trailing-whitespace
 
-  - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.1.1
-    hooks:
-      - id: check-dev-files
-        args:
-          - --ci-skipped-tests=all
-          - --no-macos
-          - --no-prettierrc
-          - --pin-requirements=bimonthly
-          - --repo-name=PWA-pages
-          - --repo-title=PWA Pages
-      - id: colab-toc-visible
-      - id: fix-nbformat-version
-  - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.7.0
-    hooks:
-      - id: nbqa-pyupgrade
-        args:
-          - --py37-plus
-      - id: nbqa-ruff
-        args:
-          - --fix
-
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 23.11.0
     hooks:
@@ -75,7 +67,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.27.1
+    rev: 0.27.3
     hooks:
       - id: check-jsonschema
         name: Check project inventory YAML files
@@ -85,7 +77,7 @@ repos:
         args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v8.0.0
+    rev: v8.1.1
     hooks:
       - id: cspell
 
@@ -136,28 +128,21 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.3
+    rev: v4.0.0-alpha.3-1
     hooks:
       - id: prettier
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.334
+    rev: v1.1.339
     hooks:
       - id: pyright
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
-    hooks:
-      - id: pyupgrade
-        args:
-          - --py37-plus
-
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.4
+    rev: v0.1.7
     hooks:
       - id: ruff
-        args:
-          - --fix
+        args: [--fix]
+        types_or: [python, pyi, jupyter]
 
   - repo: https://github.com/ComPWA/mirrors-taplo
     rev: v0.8.1
