--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,36 +61,35 @@ dev = [
 ]
 doc = [
     "Sphinx >=3",
-    "docutils <0.18", # https://github.com/executablebooks/jupyter-book/issues/2026#issuecomment-1636657741
     "feynman",
     "ipywidgets",
     "jupyter",
     "matplotlib",
     "myst-nb >=0.11", # myst_enable_extensions
-    "numpy <1.24", # bug in feynman: https://github.com/ComPWA/PWA-pages/actions/runs/3868808372/jobs/6594501436#step:6:177
+    "sphinx-api-relink >=0.0.8",
     "sphinx-book-theme",
     "sphinx-codeautolink[ipython]",
     "sphinx-comments",
     "sphinx-copybutton",
     "sphinx-design",
     "sphinx-hep-pdgref",
+    "sphinx-pybtex-etal-style",
     "sphinx-thebe",
     "sphinx-togglebutton",
     "sphinxcontrib-bibtex >=2.2", # bibtex_reference_style
     "sympy",
-    'importlib-metadata; python_version <"3.8.0"',
 ]
-format = [
-    "black",
-]
+format = ["black"]
 jupyter = [
     "PWA-pages[doc]",
+    "isort",
     "jupyterlab",
     "jupyterlab-code-formatter",
+    "jupyterlab-git",
     "jupyterlab-lsp",
     "jupyterlab-myst",
+    "python-lsp-ruff",
     "python-lsp-server[rope]",
-    'ypy-websocket <0.8.3; python_version <"3.8.0"',
 ]
 lint = [
     "PWA-pages[mypy]",
@@ -98,6 +97,7 @@ lint = [
 ]
 mypy = [
     "mypy >=0.730", # error code support
+    "sphinx-api-relink >=0.0.8",
     "types-PyYAML",
     "types-docutils",
     "types-pkg-resources",
@@ -111,6 +111,7 @@ sty = [
     "pre-commit >=1.4.0",
 ]
 test = [
+    "nbmake",
     "pytest",
     "pytest-cov",
     "pytest-xdist",
@@ -195,20 +196,6 @@ module = ["sphinx.*"]
 ignore_missing_imports = true
 module = ["sphinxcontrib.bibtex.*"]
 
-[tool.nbqa.addopts]
-ruff = [
-    "--extend-ignore=B018",
-    "--extend-ignore=C90",
-    "--extend-ignore=D",
-    "--extend-ignore=N806",
-    "--extend-ignore=N816",
-    "--extend-ignore=PLR09",
-    "--extend-ignore=PLR2004",
-    "--extend-ignore=PLW0602",
-    "--extend-ignore=PLW0603",
-    "--line-length=85",
-]
-
 [tool.pyright]
 exclude = [
     "**/.git",
@@ -265,6 +252,7 @@ testpaths = [
 ]
 
 [tool.ruff]
+extend-include = ["*.ipynb"]
 extend-select = [
     "A",
     "B",
@@ -319,6 +307,22 @@ target-version = "py37"
 task-tags = ["cspell"]
 
 [tool.ruff.per-file-ignores]
+"*.ipynb" = [
+    "B018",
+    "C90",
+    "D",
+    "E402",
+    "E703",
+    "N806",
+    "N816",
+    "PLR09",
+    "PLR2004",
+    "PLW0602",
+    "PLW0603",
+    "S101",
+    "T20",
+    "TCH00",
+]
 "docs/*" = [
     "E402",
     "INP001",
@@ -327,6 +331,7 @@ task-tags = ["cspell"]
     "S113",
     "T201",
 ]
+"docs/conf.py" = ["A001"]
 "setup.py" = ["D100"]
 "src/pwa_pages/project_inventory.py" = [
     "FA100",
@@ -339,6 +344,7 @@ task-tags = ["cspell"]
     "PLR0913",
     "PLR2004",
     "S101",
+    "T20",
 ]
 
 [tool.ruff.pydocstyle]
