DOC: add FDC-PWA to PWA framework inventory
Co-authored-by: Nils Huesken <nils.huesken@googlemail.com>

--- a/docs/software/amplitude-analysis-projects.yml
+++ b/docs/software/amplitude-analysis-projects.yml
@@ -33,6 +33,13 @@ projects:
   - name: cFit
     url: https://github.com/cfit/cfit
 
+  - name: cFit
+    url: https://www1.ihep.ac.cn/wjx/pwa/index.html
+    since: 2000
+    collaboration: BESIII
+    languages:
+      - C++
+
   - name: GPUPWA
     url: https://sourceforge.net/projects/gpupwa
     since: 2011
