MAINT: address Ruff and Pyright issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -189,6 +189,7 @@ include = [
     "docs",
     "src",
 ]
+reportCallIssue = false
 reportGeneralTypeIssues = false
 reportIncompatibleMethodOverride = false
 reportMissingParameterType = false
