--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,9 +80,9 @@ doc = [
     "sphinxcontrib-bibtex >=2.2", # bibtex_reference_style
     "sympy",
 ]
-format = ["black"]
 jupyter = [
     "PWA-pages[doc]",
+    "black",
     "isort",
     "jupyterlab",
     "jupyterlab-code-formatter",
@@ -92,30 +92,26 @@ jupyter = [
     "python-lsp-ruff",
     "python-lsp-server[rope]",
 ]
-lint = [
-    "PWA-pages[mypy]",
-    "ruff",
-]
-mypy = [
-    "mypy >=0.730", # error code support
-    "sphinx-api-relink >=0.0.8",
-    "types-PyYAML",
-    "types-docutils",
-    "types-pkg-resources",
-    "types-python-dateutil",
-    "types-setuptools",
-]
 sty = [
-    "PWA-pages[format]",
-    "PWA-pages[lint]",
-    "PWA-pages[test]", # for pytest type hints
+    "PWA-pages[types]",
+    "mypy >=0.730", # error code support
     "pre-commit >=1.4.0",
+    "ruff",
 ]
 test = [
     "nbmake",
     "pytest",
     "pytest-cov",
     "pytest-xdist",
+]
+types = [
+    "pytest",
+    "sphinx-api-relink >=0.0.8",
+    "types-PyYAML",
+    "types-docutils",
+    "types-pkg-resources",
+    "types-python-dateutil",
+    "types-setuptools",
 ]
 
 [project.readme]
@@ -144,30 +140,6 @@ where = ["src"]
 
 [tool.setuptools_scm]
 write_to = "src/pwa_pages/version.py"
-
-[tool.black]
-exclude = '''
-/(
-    .*\.egg-info
-    | .*build
-    | \.eggs
-    | \.git
-    | \.tox
-    | \.venv
-    | \.vscode
-    | dist
-)/
-'''
-include = '\.pyi?$'
-preview = true
-target-version = [
-    "py310",
-    "py311",
-    "py312",
-    "py37",
-    "py38",
-    "py39",
-]
 
 [tool.coverage.run]
 branch = true
@@ -212,6 +184,7 @@ include = [
     "docs",
     "src",
 ]
+reportCallIssue = false
 reportGeneralTypeIssues = false
 reportIncompatibleMethodOverride = false
 reportMissingParameterType = false
@@ -256,6 +229,19 @@ testpaths = [
 
 [tool.ruff]
 extend-include = ["*.ipynb"]
+preview = true
+show-fixes = true
+src = [
+    "src",
+    "tests",
+]
+target-version = "py37"
+
+[tool.ruff.format]
+docstring-code-format = true
+line-ending = "lf"
+
+[tool.ruff.lint]
 extend-select = [
     "A",
     "B",
@@ -299,17 +285,16 @@ ignore = [
     "D407",
     "D416",
     "E501",
+    "ISC001",
+    "PLW1514",
     "SIM108",
 ]
-show-fixes = true
-src = [
-    "src",
-    "tests",
-]
-target-version = "py37"
 task-tags = ["cspell"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.isort]
+split-on-trailing-comma = false
+
+[tool.ruff.lint.per-file-ignores]
 "*.ipynb" = [
     "B018",
     "C90",
@@ -347,13 +332,15 @@ task-tags = ["cspell"]
     "D",
     "INP001",
     "PGH001",
+    "PLC2701",
     "PLR0913",
     "PLR2004",
+    "PLR6301",
     "S101",
     "T20",
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.tomlsort]
