DOC: list `ThreeBodyDecays.jl` under frameworks

--- a/docs/software/amplitude-analysis-projects.yml
+++ b/docs/software/amplitude-analysis-projects.yml
@@ -106,6 +106,10 @@ projects:
       - BESIII
       - LHCb
 
+  - name: ThreeBodyDecays.jl
+    url: https://github.com/mmikhasenko/ThreeBodyDecays.jl
+    collaboration: LHCb
+
 collaborations:
   BESIII: http://bes3.ihep.ac.cn
   CLAS12: https://www.jlab.org/physics/hall-b/clas12
