--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,7 @@
     "editor.formatOnSave": false
   },
   "[git-commit]": {
-    "editor.rulers": [
-      72
-    ],
+    "editor.rulers": [72],
     "rewrap.wrappingColumn": 72
   },
   "[json]": {
@@ -23,16 +21,12 @@
       "source.organizeImports": "explicit"
     },
     "editor.defaultFormatter": "charliermarsh.ruff",
-    "editor.rulers": [
-      88
-    ]
+    "editor.rulers": [88]
   },
   "[yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "coverage-gutters.coverageFileNames": [
-    "coverage.xml"
-  ],
+  "coverage-gutters.coverageFileNames": ["coverage.xml"],
   "coverage-gutters.coverageReportFileName": "**/htmlcov/index.html",
   "coverage-gutters.showGutterCoverage": false,
   "coverage-gutters.showLineCoverage": true,
@@ -46,15 +40,11 @@
     "**/.tox/**": true
   },
   "git.rebaseWhenSync": true,
-  "github-actions.workflows.pinned.workflows": [
-    ".github/workflows/ci.yml"
-  ],
+  "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
   "gitlens.telemetry.enabled": false,
   "livePreview.defaultPreviewPath": "docs/_build/html",
   "multiDiffEditor.experimental.enabled": true,
-  "mypy-type-checker.args": [
-    "--config-file=${workspaceFolder}/pyproject.toml"
-  ],
+  "mypy-type-checker.args": ["--config-file=${workspaceFolder}/pyproject.toml"],
   "mypy-type-checker.importStrategy": "fromEnvironment",
   "myst.preview.extensions": [
     "amsmath",
@@ -90,9 +80,7 @@
   },
   "telemetry.telemetryLevel": "off",
   "yaml.schemas": {
-    "./docs/software/project-inventory-schema.json": [
-      "docs/software/*.yml"
-    ],
+    "./docs/software/project-inventory-schema.json": ["docs/software/*.yml"],
     "https://json.schemastore.org/github-workflow.json": "./.github/workflows/requirements.yml"
   }
 }
