MAINT: apply fixes by pre-commit hooks

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ prof/
 
 # Virtual environments
 *venv/
+.pixi/
 .tox/
 pyvenv*/
 
@@ -45,7 +46,6 @@ pyvenv*/
 !.cspell.json
 !.github/*.yml
 !.github/*/*.yml
-!.gitpod.yml
 !.pre-commit-config.yaml
 !.readthedocs.yml
 !.vscode/*.json
