--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,8 @@ namespaces = false
 where = ["src"]
 
 [tool.setuptools_scm]
+local_scheme = "no-local-version"
+version_scheme = "post-release"
 write_to = "src/pwa_pages/version.py"
 
 [tool.coverage.run]
@@ -165,6 +167,109 @@ module = ["sphinx.*"]
 [[tool.mypy.overrides]]
 ignore_missing_imports = true
 module = ["sphinxcontrib.bibtex.*"]
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.activation.env]
+PRETTIER_LEGACY_CLI = "1"
+
+[tool.pixi.dependencies]
+graphviz = "*"
+python = "3.12.*"
+
+[tool.pixi.environments]
+default = {features = [
+    "dev",
+    "doc",
+    "jupyter",
+    "sty",
+    "test",
+    "types",
+]}
+
+[tool.pixi.feature.dev.tasks.ci]
+depends_on = ["cov", "docnb", "linkcheck", "sty"]
+
+[tool.pixi.feature.dev.tasks.cov]
+cmd = """
+pytest tests \
+    --cov-fail-under=90 \
+    --cov-report=html \
+    --cov-report=xml \
+    --cov=pwa_pages
+"""
+
+[tool.pixi.feature.dev.tasks.doc]
+cmd = """
+sphinx-build \
+    --builder dirhtml \
+    --fail-on-warning \
+    --keep-going \
+    --show-traceback \
+    docs/ docs/_build/html
+"""
+env = {FORCE_COLOR = "yes"}
+
+[tool.pixi.feature.dev.tasks.doclive]
+cmd = """
+sphinx-autobuild \
+    --builder dirhtml \
+    --open-browser \
+    --re-ignore '.*/__pycache__/.*' \
+    --re-ignore '.*/.ipynb_checkpoints/.*' \
+    --re-ignore '.*\\.gitignore' \
+    --re-ignore 'docs/_build/.*' \
+    --re-ignore 'docs/.*\\.csv' \
+    --re-ignore 'docs/.*\\.gif' \
+    --re-ignore 'docs/.*\\.gv' \
+    --re-ignore 'docs/.*\\.inv' \
+    --re-ignore 'docs/.*\\.json' \
+    --re-ignore 'docs/.*\\.pickle' \
+    --re-ignore 'docs/.*\\.png' \
+    --re-ignore 'docs/.*\\.svg' \
+    --re-ignore 'docs/.*\\.yaml' \
+    --re-ignore 'docs/.*\\.yml' \
+    --re-ignore docs/api \
+    --watch docs \
+    docs/ docs/_build/html
+"""
+env = {FORCE_COLOR = "yes"}
+
+[tool.pixi.feature.dev.tasks.docnb]
+cmd = "pixi run doc"
+env = {EXECUTE_NB = "yes", FORCE_COLOR = "yes"}
+
+[tool.pixi.feature.dev.tasks.docnblive]
+cmd = "pixi run doclive"
+env = {EXECUTE_NB = "yes", FORCE_COLOR = "yes"}
+
+[tool.pixi.feature.dev.tasks.linkcheck]
+cmd = """
+sphinx-build \
+    --builder linkcheck \
+    --show-traceback \
+    docs/ docs/_build/linkcheck
+"""
+env = {FORCE_COLOR = "yes"}
+
+[tool.pixi.feature.dev.tasks.nb]
+cmd = "pytest --nbmake docs"
+env = {PYTHONHASHSEED = "0"}
+
+[tool.pixi.feature.dev.tasks.sty]
+cmd = """
+mypy docs src tests # run separately because of potential caching problems
+pre-commit run  -a
+"""
+env = {SKIP = "mypy, pyright"}
+
+[tool.pixi.feature.dev.tasks.tests]
+cmd = "pytest"
+
+[tool.pixi.pypi-dependencies]
+PWA-pages = {path = ".", editable = true}
 
 [tool.pyright]
 exclude = [
@@ -230,7 +335,6 @@ src = [
     "src",
     "tests",
 ]
-target-version = "py38"
 
 [tool.ruff.format]
 docstring-code-format = true
@@ -338,6 +442,5 @@ sort_first = [
     "tool.setuptools",
     "tool.setuptools_scm",
 ]
-sort_table_keys = true
 spaces_indent_inline_array = 4
 trailing_comma_inline_array = true
