--- a/tox.ini
+++ b/tox.ini
@@ -34,9 +34,10 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
+    --builder dirhtml \
+    --fail-on-warning \
     --keep-going \
-    -TW \
-    -b dirhtml \
+    --show-traceback \
     docs/ docs/_build/html
 description =
   Build documentation and API through Sphinx
@@ -49,10 +50,12 @@ allowlist_externals =
   sphinx-autobuild
 commands =
   sphinx-autobuild \
+    --builder dirhtml \
     --open-browser \
-    --re-ignore .*/.ipynb_checkpoints/.* \
     --re-ignore .*/__pycache__/.* \
+    --re-ignore .*/.ipynb_checkpoints/.* \
     --re-ignore .*\.gitignore \
+    --re-ignore docs/_build/.* \
     --re-ignore docs/.*\.csv \
     --re-ignore docs/.*\.gif \
     --re-ignore docs/.*\.gv \
@@ -63,10 +66,8 @@ commands =
     --re-ignore docs/.*\.svg \
     --re-ignore docs/.*\.yaml \
     --re-ignore docs/.*\.yml \
-    --re-ignore docs/_build/.* \
     --re-ignore docs/api \
     --watch docs \
-    -b dirhtml \
     docs/ docs/_build/html
 description =
   Set up a server to directly preview changes to the HTML pages
@@ -79,9 +80,10 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
+    --builder dirhtml \
+    --fail-on-warning \
     --keep-going \
-    -TW \
-    -b dirhtml \
+    --show-traceback \
     docs/ docs/_build/html
 description =
   Build documentation through Sphinx WITH output of Jupyter notebooks
@@ -95,10 +97,12 @@ allowlist_externals =
   sphinx-autobuild
 commands =
   sphinx-autobuild \
+    --builder dirhtml \
     --open-browser \
-    --re-ignore .*/.ipynb_checkpoints/.* \
     --re-ignore .*/__pycache__/.* \
+    --re-ignore .*/.ipynb_checkpoints/.* \
     --re-ignore .*\.gitignore \
+    --re-ignore docs/_build/.* \
     --re-ignore docs/.*\.csv \
     --re-ignore docs/.*\.gif \
     --re-ignore docs/.*\.gv \
@@ -109,10 +113,8 @@ commands =
     --re-ignore docs/.*\.svg \
     --re-ignore docs/.*\.yaml \
     --re-ignore docs/.*\.yml \
-    --re-ignore docs/_build/.* \
     --re-ignore docs/api \
     --watch docs \
-    -b dirhtml \
     docs/ docs/_build/html
 description =
   Set up a server to directly preview changes to the HTML pages
@@ -135,8 +137,8 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    -T \
-    -b linkcheck \
+    --builder linkcheck \
+    --show-traceback \
     docs/ docs/_build/linkcheck
 description =
   Check external links in the documentation (requires internet connection)
