MAINT: move `description` on one line

--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,8 @@ allowlist_externals =
   pytest
 commands =
   pytest {posargs}
-description =
-  Run all unit tests
+description = Run all unit tests
+passenv = *
 
 [testenv:cov]
 allowlist_externals =
@@ -24,8 +24,7 @@ commands =
     --cov-report=html \
     --cov-report=xml \
     --cov=pwa_pages
-description =
-  Compute test coverage
+description = Compute test coverage
 
 [testenv:doc]
 allowlist_externals =
@@ -37,8 +36,7 @@ commands =
     --keep-going \
     --show-traceback \
     docs/ docs/_build/html
-description =
-  Build documentation and API through Sphinx
+description = Build documentation and API through Sphinx
 setenv =
   FORCE_COLOR = yes
 
@@ -66,8 +64,7 @@ commands =
     --re-ignore docs/api \
     --watch docs \
     docs/ docs/_build/html
-description =
-  Set up a server to directly preview changes to the HTML pages
+description = Set up a server to directly preview changes to the HTML pages
 setenv =
   FORCE_COLOR = yes
 
@@ -81,8 +78,7 @@ commands =
     --keep-going \
     --show-traceback \
     docs/ docs/_build/html
-description =
-  Build documentation through Sphinx WITH output of Jupyter notebooks
+description = Build documentation through Sphinx WITH output of Jupyter notebooks
 setenv =
   EXECUTE_NB = yes
   FORCE_COLOR = yes
@@ -111,8 +107,7 @@ commands =
     --re-ignore docs/api \
     --watch docs \
     docs/ docs/_build/html
-description =
-  Set up a server to directly preview changes to the HTML pages
+description = Set up a server to directly preview changes to the HTML pages
 setenv =
   EXECUTE_NB = yes
   FORCE_COLOR = yes
@@ -123,8 +118,7 @@ allowlist_externals =
 changedir = docs/_build
 commands =
   jcache {posargs:notebook list}
-description =
-  Inspect Jupyter cache
+description = Inspect Jupyter cache
 
 [testenv:linkcheck]
 allowlist_externals =
@@ -134,8 +128,7 @@ commands =
     --builder linkcheck \
     --show-traceback \
     docs/ docs/_build/linkcheck
-description =
-  Check external links in the documentation (requires internet connection)
+description = Check external links in the documentation (requires internet connection)
 setenv =
   FORCE_COLOR = yes
 
@@ -144,8 +137,7 @@ allowlist_externals =
   pytest
 commands =
   pytest --nbmake {posargs:docs}
-description =
-  Run all notebooks with pytest
+description = Run all notebooks with pytest
 setenv =
   PYTHONHASHSEED = 0
 
@@ -156,7 +148,6 @@ allowlist_externals =
 commands =
   mypy docs src tests # run separately because of potential caching problems
   pre-commit run {posargs} -a
-description =
-  Perform all linting, formatting, and spelling checks
+description = Perform all linting, formatting, and spelling checks
 setenv =
   SKIP = mypy, pyright
