FIX: do not explicitly run `mypy` in `sty` job

--- a/tox.ini
+++ b/tox.ini
@@ -135,11 +135,9 @@ setenv =
 
 [testenv:sty]
 allowlist_externals =
-  mypy
   pre-commit
 commands =
-  mypy docs src tests # run separately because of potential caching problems
-  pre-commit run {posargs} -a
+  pre-commit run {posargs} --all-files
 description = Perform all linting, formatting, and spelling checks
 setenv =
-  SKIP = mypy, pyright
+  SKIP = pyright
