--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,20 +1,20 @@
 version: 2
 
-sphinx:
-  builder: dirhtml
-  configuration: docs/conf.py
-  fail_on_warning: true
-
-formats:
-  - htmlzip
-
 build:
-  os: ubuntu-22.04
+  os: ubuntu-24.04
   tools:
     python: "3.12"
-  apt_packages:
-    - graphviz
-  jobs:
-    post_install:
-      - python -m pip install 'uv>=0.2.0'
-      - python -m uv pip install -c .constraints/py3.12.txt -e .[doc]
+  commands:
+    - |-
+      export PIXI_HOME=$READTHEDOCS_VIRTUALENV_PATH
+      curl -fsSL https://pixi.sh/install.sh | bash
+      pixi global install graphviz uv
+    - |-
+      export UV_LINK_MODE=copy
+      uv run \
+        --extra doc \
+        --locked \
+        --with tox \
+        tox -e doc
+      mkdir -p $READTHEDOCS_OUTPUT
+      mv docs/_build/html $READTHEDOCS_OUTPUT
