--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 ci:
   autoupdate_commit_msg: "MAINT: update lock files"
-  autoupdate_schedule: quarterly # already done by requirements-cron.yml
+  autoupdate_schedule: quarterly
   skip:
     - check-jsonschema
     - mypy
