--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,12 @@
 ci:
-  autoupdate_commit_msg: "MAINT: update pip constraints and pre-commit"
-  autoupdate_schedule: quarterly # already done by requirements-cron.yml
+  autoupdate_commit_msg: "MAINT: update lock files"
+  autoupdate_schedule: quarterly
   skip:
     - check-jsonschema
     - mypy
     - pyright
     - update-json-schema
+    - uv-lock
 
 repos:
   - repo: meta
@@ -14,15 +15,15 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/ComPWA/policy
-    rev: 0.4.0
+    rev: 0.5.0
     hooks:
       - id: check-dev-files
         args:
           - --ci-skipped-tests=all
-          - --dev-python-version=3.12
+          - --no-binder
+          - --no-cd
           - --no-macos
-          - --no-prettierrc
-          - --pin-requirements=bimonthly
+          - --no-pypi
           - --repo-name=PWA-pages
           - --repo-title=PWA Pages
       - id: colab-toc-visible
@@ -58,7 +59,7 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.4
+    rev: v0.7.0
     hooks:
       - id: ruff
         args: [--fix]
@@ -67,7 +68,7 @@ repos:
         types_or: [python, pyi, jupyter]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: check-ast
       - id: check-case-conflict
@@ -108,7 +109,7 @@ repos:
           - --in-place
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.29.2
+    rev: 0.29.4
     hooks:
       - id: check-jsonschema
         name: Check project inventory YAML files
@@ -118,7 +119,7 @@ repos:
         args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v8.13.3
+    rev: v8.15.2
     hooks:
       - id: cspell
 
@@ -143,8 +144,8 @@ repos:
         types:
           - python
 
-  - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.379
+  - repo: https://github.com/ComPWA/pyright-pre-commit
+    rev: v1.1.385
     hooks:
       - id: pyright
 
@@ -156,3 +157,8 @@ repos:
         language: system
         pass_filenames: false
         files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
+
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.4.25
+    hooks:
+      - id: uv-lock
