--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
       coverage-target: pwa_pages
       skipped-python-versions: all
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   style:
     if: inputs.specific-pip-packages == ''
     secrets:
